Fixed bible classes spacing

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -744,21 +744,22 @@ input[type="checkbox"] {
 }
 
 .biblicalInfoClasses {
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    row-gap: 1rem;
+    column-gap: 1rem;
     width: 100%;
     color: black;
-    padding: 0 5vh;
-    justify-content: center;
-    align-items: stretch;
-    column-gap: 1rem;
+    /* padding: 0 5vh; */
+    /* justify-content: center; */
+    /* align-items: stretch; */
 }
 
 .biblicalInfoClasses li {
     list-style: none;
     text-align: left;
     font-size: 2vh;
-    width: 25%;
+    width: 100%;
     margin-right: 5%;
     background-color: #EFF0F0;
 }
@@ -769,8 +770,10 @@ input[type="checkbox"] {
 
 @media (max-width: 1365px) {
     .biblicalInfoClasses {
+        display: flex;
         flex-direction: column;
-        row-gap: 1rem; 
+        row-gap: 1rem;
+        padding: 0 1rem;
     }
 
     .biblicalInfoClasses li {
